; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_prodigy192.c_prodigy192_miodio_exists.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_prodigy192.c_prodigy192_miodio_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ice1712 = type { i32 }

@AK4114_REG_INT0_MASK = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_ice1712*)* @prodigy192_miodio_exists to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prodigy192_miodio_exists(%struct.snd_ice1712* %0) #0 {
  %2 = alloca %struct.snd_ice1712*, align 8
  %3 = alloca i8, align 1
  %4 = alloca i8, align 1
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  store %struct.snd_ice1712* %0, %struct.snd_ice1712** %2, align 8
  store i8 -47, i8* %4, align 1
  %7 = load i8, i8* @AK4114_REG_INT0_MASK, align 1
  store i8 %7, i8* %5, align 1
  store i32 0, i32* %6, align 4
  %8 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %9 = load i8, i8* %5, align 1
  %10 = call zeroext i8 @prodigy192_ak4114_read(%struct.snd_ice1712* %8, i8 zeroext %9)
  store i8 %10, i8* %3, align 1
  %11 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %12 = load i8, i8* %5, align 1
  %13 = call i32 @prodigy192_ak4114_write(%struct.snd_ice1712* %11, i8 zeroext %12, i8 zeroext -47)
  %14 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %15 = load i8, i8* %5, align 1
  %16 = call zeroext i8 @prodigy192_ak4114_read(%struct.snd_ice1712* %14, i8 zeroext %15)
  %17 = zext i8 %16 to i32
  %18 = icmp eq i32 %17, 209
  br i1 %18, label %19, label %24

19:                                               ; preds = %1
  %20 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %21 = load i8, i8* %5, align 1
  %22 = load i8, i8* %3, align 1
  %23 = call i32 @prodigy192_ak4114_write(%struct.snd_ice1712* %20, i8 zeroext %21, i8 zeroext %22)
  store i32 1, i32* %6, align 4
  br label %24

24:                                               ; preds = %19, %1
  %25 = load i32, i32* %6, align 4
  ret i32 %25
}

declare dso_local zeroext i8 @prodigy192_ak4114_read(%struct.snd_ice1712*, i8 zeroext) #1

declare dso_local i32 @prodigy192_ak4114_write(%struct.snd_ice1712*, i8 zeroext, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
